<resources>
    <string name="app_name">SwasthGarbh</string>
    <string name="patient_register">Patient</string>
    <string name="doctor_register">Doctor</string>
    <string name="signin_button">Sign In</string>
    <string name="copyright">Developed by CompBio Lab, IIT Roorkee</string>
    <string name="statusOfPatientState">The complexity of this state</string>
    <string name="whoGraphDescription">Graph showing the women who follow the WHO Guidelines during their pregnancy</string>
    <string name="PieChartDesc">(Distribution of #patients on various factors)</string>
    <string name="PirChartDesc">This is Pie Chart</string>
    <string name="or_register_as">or Register as</string>
    <string name="name">Name</string>
    <string name="doctor">Doctor</string>
    <string name="doctors_mobile">Doctors Mobile</string>
    <string name="pregnancy_start">Pregnancy EDD</string>
    <string name="who_medication">WHO Medication</string>
    <string name="add_data">Add Data</string>
    <string name="who">Tests</string>
    <string name="medication">Medication</string>
    <string name="your_history">Your History</string>
    <string name="blood_pressure">Blood Pressure</string>
    <string name="systole">Systolic BP</string>
    <string name="diastole">Diastolic BP</string>
    <string name="headache">Headache</string>
    <string name="abdominal_pain">Abdominal Pain</string>
    <string name="visual_problems">Visual Problems</string>
    <string name="decreased_fetal_movements">Decreased Fetal Movements</string>
    <string name="swelling_in_hands_or_face">Swelling in Hands or Face</string>
    <string name="hypertension">Hypertension</string>
    <string name="urine_albumin">Urine Albumin</string>
    <string name="bleeding_per_vaginum">Bleeding per vaginum</string>
    <string name="heart_rate">Heart Rate</string>
    <string name="in_beats_minute">in Beats/Minute</string>
    <string name="body_weight">Body Weight</string>
    <string name="in_kg">in Kg</string>
    <string name="extra_comments_complications">Extra Comments / Complications</string>
    <string name="something_you_want_doctor_to_know">Something you want doctor to know</string>
    <string name="upload_photo">Upload photo</string>
    <string name="send">Send</string>
    <string name="period">Period</string>
    <string name="starting_from">Starting from :</string>
    <string name="to_be_taken_till">To be taken till :</string>
    <string name="diabetese">Diabetes</string>
    <string name="anaemia">Anaemia</string>
    <string name="hiv">HIV</string>
    <string name="ultrasound">Ultrasound</string>
    <string name="tetnus">Tetnus</string>
    <string name="urine_test">Urine Test</string>
    <string name="diabeteseAssist">&#9900; Diabetes</string>
    <string name="anaemiaAssist">&#9900; Anaemia</string>
    <string name="hivAssist">&#9900; HIV</string>
    <string name="ultrasoundAssist">&#9900; Ultrasound</string>
    <string name="tetnusAssist">⚬ Tetanus</string>
    <string name="urine_testAssist">&#9900; Urine Test</string>
    <string name="update_my_data">Update My Data</string>
    <string name="lmp">LMP</string>
    <string name="edd">EDD</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyBadggeNkbB7NwvBo_htgmzVEC2vmRJbNg</string>
    <string-array name="medicine_freq">
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
    </string-array>
    <string name="title_activity_all_images_view" translatable="false">all_images_view</string>
    <string name="address">Address/UHID</string>
    <string name="age_in_years">Age (in years)</string>
    <string name="last_mesntural_period">Last Menstrual Period</string>
    <string name="date">Date</string>
    <string name="some_extra_details_optional">Some extra details (Optional)</string>
    <string name="history_of_high_blood_pressure_prior_to_pregnancy">History of high blood pressure prior to pregnancy</string>
    <string name="a_history_of_preeclampsia">A history of preeclampsia</string>
    <string name="having_a_mother_or_sister_who_had_preeclampsia">Having a mother or sister who had preeclampsia</string>
    <string name="a_history_of_obesity">A history of obesity</string>
    <string name="carrying_more_than_one_baby">Carrying more than one baby</string>
    <string name="history_of_diabetes_kidney_disease_lupus_or_rheumatoid_arthritis">History of diabetes, kidney disease, lupus, or rheumatoid arthritis</string>
    <string name="your_credentials">Your credentials</string>
    <string name="mobile">Mobile</string>
    <string name="password">Password</string>
    <string name="email_optional">Email (Optional)</string>
    <string name="doctor_s_number">Registered Doctor\'s Number</string>
    <string name="doctor_s_name">Doctor\'s Name</string>
    <string name="register">Register</string>
    <string name="aboutdef1">Preeclampsia is a pregnancy complication characterized by high blood pressure and signs of damage to another organ system, most often the liver and kidneys. Preeclampsia usually begins after 20 weeks of pregnancy in women whose blood pressure had been normal. Left untreated, preeclampsia can lead to serious — even fatal — complications for both you and your baby. If you have preeclampsia, the most effective treatment is delivery of your baby. Even after delivering the baby, it can still take a while for you to get better.\n\nIf you\'re diagnosed with preeclampsia too early in your pregnancy to deliver your baby, you and your doctor face a challenging task. Your baby needs more time to mature, but you need to avoid putting yourself or your baby at risk of serious complications.\n\nRarely, preeclampsia develops after delivery of a baby, a condition known as postpartum preeclampsia.</string>
    <string name="aboutdef2">Preeclampsia sometimes develops without any symptoms. High blood pressure may develop slowly, or it may have a sudden onset. Monitoring your blood pressure is an important part of prenatal care because the first sign of preeclampsia is commonly a rise in blood pressure.\n\nBlood pressure that exceeds 140/90 millimeters of mercury (mm Hg) or greater — documented on two occasions, at least four hours apart — is abnormal. Other signs and symptoms of preeclampsia may include:\n\nExcess protein in your urine (proteinuria) or additional signs of kidney problems Severe headaches Changes in vision, including temporary loss of vision, blurred vision or light sensitivity Upper abdominal pain, usually under your ribs on the right side Nausea or vomiting Decreased urine output Decreased levels of platelets in your blood (thrombocytopenia) Impaired liver function Shortness of breath, caused by fluid in your lungs Sudden weight gain and swelling (edema) — particularly in your face and hands — may occur with preeclampsia. But these also occur in many normal pregnancies, so they\'re not considered reliable signs of preeclampsia.</string>
    <string name="aboutdef3">Make sure you attend your prenatal visits so that your care provider can monitor your blood pressure. Contact your doctor immediately or go to an emergency room if you have severe headaches, blurred vision or other visual disturbance, severe pain in your abdomen, or severe shortness of breath. Because headaches, nausea, and aches and pains are common pregnancy complaints, it\'s difficult to know when new symptoms are simply part of being pregnant and when they may indicate a serious problem — especially if it\'s your first pregnancy. If you\'re concerned about your symptoms, contact your doctor.</string>
    <string name="aboutdef4">The exact cause of preeclampsia involves several factors. Experts believe it begins in the placenta — the organ that nourishes the fetus throughout pregnancy.\n\nEarly in pregnancy, new blood vessels develop and evolve to efficiently send blood to the placenta. In women with preeclampsia, these blood vessels don\'t seem to develop or function properly. They\'re narrower than normal blood vessels and react differently to hormonal signaling, which limits the amount of blood that can flow through them.\n\nCauses of this abnormal development may include: Insufficient blood flow to the uterus Damage to the blood vessels A problem with the immune system Certain genes</string>
    <string name="aboutdef5">Preeclampsia is classified as one of four high blood pressure disorders that can occur during pregnancy. The other three are:\n\nGestational hypertension. Women with gestational hypertension have high blood pressure but no excess protein in their urine or other signs of organ damage. Some women with gestational hypertension eventually develop preeclampsia.\n\nChronic hypertension. Chronic hypertension is high blood pressure that was present before pregnancy or that occurs before 20 weeks of pregnancy. But because high blood pressure usually doesn\'t have symptoms, it may be hard to determine when it began.\n\nChronic hypertension with superimposed preeclampsia. This condition occurs in women who have been diagnosed with chronic high blood pressure before pregnancy, but then develop worsening high blood pressure and protein in the urine or other health complications during pregnancy.</string>
    <string name="aboutdef6">Preeclampsia develops only as a complication of pregnancy. Risk factors include: History of preeclampsia. A personal or family history of preeclampsia significantly raises your risk of preeclampsia. Chronic hypertension. If you already have chronic hypertension, you have a higher risk of developing preeclampsia.\n\nFirst pregnancy. The risk of developing preeclampsia is highest during your first pregnancy.\n\nNew paternity. Each pregnancy with a new partner increases the risk of preeclampsia more than does a second or third pregnancy with the same partner.\n\nAge. The risk of preeclampsia is higher for very young pregnant women as well as pregnant women older than 40.\n\nRace. Black women have a higher risk of developing preeclampsia than do white women or women who are Asian or Hispanic.\n\nObesity. The risk of preeclampsia is higher if you\'re obese.\n\nMultiple pregnancy. Preeclampsia is more common in women who are carrying twins, triplets or other multiples. Interval between pregnancies.\n\nHaving babies less than two years or more than 10 years apart leads to a higher risk of preeclampsia.\n\nHistory of certain conditions. Having certain conditions before you become pregnant — such as chronic high blood pressure, migraines, type 1 or type 2 diabetes, kidney disease, a tendency to develop blood clots, or lupus — increases your risk of preeclampsia.\n\nIn vitro fertilization. Your risk of preeclampsia is increased if your baby was conceived with in vitro fertilization.</string>
    <string name="address_or_UHID">address/UHID</string>
    <string name="age_optional">Age (Optional)</string>
    <string name="mobile_optional">Mobile (Optional)</string>
</resources>